第一次修改后提交

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style type="text/css">
+			div{
+				width: 100px;
+				height: 100px;
+				background: lightcoral;
+			}
+		</style>
 	</head>
 	<body>
 		这是我的第一个博客
+		<div>000</div>
 	</body>
 </html>
